2012-09-26:
	add script/site_packages
	import warp point script from yutori server
	move lib.env to lib._env (_env store default values)
	allow user replace their own lib/env.py each update
	move settings from server.ini to lib.env
	remove lib/obj/serverconfig.py, lib.server.config
	add script/loginevent.py (send after login if set env.SEND_LOGIN_EVENT)
	add npctrade id
	fix skill use error when x or y > 127

2012-09-25
	remove unnecessary lock from lib.server

2012-09-24
	add pet thread

2012-09-23
	let pet motion refer master (sit and stand)
	replace thread.start_new_thread to threading.Thread

2012-09-21
	support set and save pet_pict_id and pet_weapon_id
	fix script.wing set wrong attribute problem
	modify some enc parameter

2012-09-20
	update db to 346
	make pet heart visible
	save item data with dumpobj
	add lib.env.USERDATA_FORMAT_VERSION
	add lib.obj.pc_data_lib to load mutil-version pc data
	add lib.users.upgrade_user_data

2012-09-17
	limited support dem parts and form change
	add command /printallequip and script.printallequip
	add command /unsetallequip and script.unsetallequip
	remove pc.dic (str:str dictionary)
	add pc.var (str:object dictionary, support save and restore standard python object)
	add lib.skills
	add test skill heal, arrow

2012-09-14
	move lib.version to lib.env
	move a part of settings to lib.env
	move license from BSD to MIT

2012-09-01
	add lib.version
	pass rijndael_obj instead of rijndael_key to general.encode/decode
	add MAX_USER_ID, MAX_PC_ID, MAX_PET_ID, MAX_MONSTER_ID
	fix monster.spawn/delete error
	use general.make_id to generate user and pc id when create
	remove serveraddress from server.ini
	add serverbindip to server.ini
	add serverpublicip to server.ini
	check address before bind on windows

2012-08-26
	use system encoding for all log
	move general.Null to general.NullClass
	remove lib/unit_test (no longer use)

2012-08-24
	add type info in database row map (not use _detect_type any more)