@@ -5,7 +5,7 @@ import os
 import time
 #static
 NAME = "virtualeco"
-LAST_UPDATE = "2012-09-26"
+LAST_UPDATE = "2012-09-27"
 DATABASE_FORMAT_VERSION = "1.1.0"
 USERDATA_FORMAT_VERSION = "1.1.0"
 
@@ -25,7 +25,7 @@ USE_DEBUGER = True
 BACKUP_USER_DATA_EVERY_DAY = False
 MAX_CONNECTION_FROM_ONE_IP = 3
 DUMP_WITH_ZLIB = False
-ZIP_MODE = "ZIP_STORED" #ZIP_DEFLATED, ZIP_STORED
+ZIP_COMPRESS = False
 
 #server config
 LOGIN_SERVER_PORT = 13000
@@ -36,6 +36,8 @@ SERVER_BROADCAST_ADDR = "localhost"
 DEFAULT_GMLEVEL = 150
 LOGIN_EVENT_ID = 30
 SEND_LOGIN_EVENT = True
+MAX_ITEM_STOCK = 10
+MAX_WAREHOURSE_STOCK = 10
 GMLEVEL_MAP = {
 	"run": 100,
 	"help": 0,
