@@ -1,4 +1,4 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
 from lib._env import *
-#USE_LOGFILE = True
+#USE_LOGFILE = False
