@@ -15,16 +15,16 @@ ex = 0
 wing = 0
 wingcolor = 0
 job = 0
-map_id = 50033000
+map_id = 10023100
 lv_base = 1
 lv_job1 = 1
 lv_job2x = 1
 lv_job2t = 1
 lv_job3 = 1
 gold = 0
-x = 4.5
-y = 4.5
-dir = 1
+x = 232.5
+y = 126.5
+dir = 2
 
 [status]
 str = 8
@@ -67,11 +67,11 @@ socks = 0
 pet = 0
 
 [sort]
-item = 3,2,5,1,4
+item = 3,2,5,4,1
 warehouse = 
 
 [item]
-1 = {s7 item_id: i60107702, s5 count: i1}
+1 = {s7 item_id: i10000000, s5 count: i1}
 2 = {s7 item_id: i10133600, s5 count: i1}
 3 = {s7 item_id: i10020114, s5 count: i1}
 4 = {s7 item_id: i10017900, s5 count: i1, s13 pet_weapon_id: i65005000, s11 pet_pict_id: i10260087}
