@@ -1,3 +1,9 @@
+2012-09-27
+	add item, warehouse stock limit
+	log file use utf-8 not system encoding
+	move general.secure* to lib.security
+	fix ctrl+c exit error on windows
+
 2012-09-26:
 	add script/site_packages
 	import warp point script from yutori server
